--- a/src/Mvc/IRO.Mvc.Core/IRO.Mvc.Core.csproj
+++ b/src/Mvc/IRO.Mvc.Core/IRO.Mvc.Core.csproj
@@ -6,11 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0-preview3-35497" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0-preview3-35497" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0-preview3-35497" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="$(AspNetMvcVersion)" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="$(AspNetMvcVersion)" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="$(AspNetMvcVersion)" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1-beta1" />
-    <PackageReference Include="IRO.Common" Version="1.0.3-alpha" />
+    <PackageReference Include="IRO.Common" Version="$(AsmVersion_Common)" />
   </ItemGroup>
 
 
