--- a/src/Mvc/IRO.Mvc.PureBinding.SwaggerSupport/IRO.Mvc.PureBinding.SwaggerSupport.csproj
+++ b/src/Mvc/IRO.Mvc.PureBinding.SwaggerSupport/IRO.Mvc.PureBinding.SwaggerSupport.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0-preview3-35497" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0-preview3-35497" />
-    <PackageReference Include="IRO.Reflection.CodeGen" Version="1.0.3-alpha"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="$(AspNetMvcVersion)" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="$(AspNetMvcVersion)" />
+    <PackageReference Include="IRO.Reflection.CodeGen" Version="$(AsmVersion_Reflection)"/>
   </ItemGroup>
 
   <ItemGroup>
