--- a/tests/IRO.Tests.ExceptionHandlerTest/IRO.Tests.ExceptionHandlerTest.csproj
+++ b/tests/IRO.Tests.ExceptionHandlerTest/IRO.Tests.ExceptionHandlerTest.csproj
@@ -2,20 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="$(AspNetMvcVersion)" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="$(AspNetMvcVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="$(AspNetMvcVersion)" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Mvc\IRO.Mvc\IRO.Mvc.csproj" />
+    <ProjectReference Include="..\..\src\Mvc\IRO.Mvc.Core\IRO.Mvc.Core.csproj" />
+    <ProjectReference Include="..\..\src\Mvc\IRO.Mvc.MvcExceptionHandler\IRO.Mvc.MvcExceptionHandler.csproj" />
   </ItemGroup>
 
 </Project>
