--- a/src/Mvc/IRO.Mvc.MvcExceptionHandler/IRO.Mvc.MvcExceptionHandler.csproj
+++ b/src/Mvc/IRO.Mvc.MvcExceptionHandler/IRO.Mvc.MvcExceptionHandler.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <Version>$(AsmVersion_Mvc)</Version>
-    <Description>Flexible library that allow you to easy handle all asp.net exceptions (and HTTP codes too).</Description>
+    <Description>Flexible library that allow you to easy handle all asp.net exceptions (and HTTP error codes too).
+Please look at an readme on github.</Description>
     <PackageProjectUrl>https://github.com/IT-rolling-out/IRO.Mvc/tree/master/src/Mvc/IRO.Mvc.MvcExceptionHandler</PackageProjectUrl>
   </PropertyGroup>
 
