DevExceptionsPageController fixed. Now debug url work always.

--- a/src/Mvc/IRO.Mvc.PureBinding.SwaggerSupport/IRO.Mvc.PureBinding.SwaggerSupport.csproj
+++ b/src/Mvc/IRO.Mvc.PureBinding.SwaggerSupport/IRO.Mvc.PureBinding.SwaggerSupport.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="$(AspNetMvcVersion)" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="$(AspNetMvcVersion)" />
-    <PackageReference Include="IRO.Reflection.CodeGen" Version="$(AsmVersion_Reflection)"/>
+    <PackageReference Include="IRO.Reflection.CodeGen" Version="1.1.0"/>
   </ItemGroup>
 
   <ItemGroup>
