--- a/src/Mvc/IRO.Mvc.CoolSwagger/IRO.Mvc.CoolSwagger.csproj
+++ b/src/Mvc/IRO.Mvc.CoolSwagger/IRO.Mvc.CoolSwagger.csproj
@@ -19,8 +19,8 @@ What it add:
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="4.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="4.5.2" />
-    <PackageReference Include="IRO.FileIO.ImprovedFileOperations" Version="$(AsmVersion_FileIO)" />
-    <PackageReference Include="IRO.Reflection.SummarySearch" Version="$(AsmVersion_Reflection)" />
+    <PackageReference Include="IRO.FileIO.ImprovedFileOperations" Version="1.0.7" />
+    <PackageReference Include="IRO.Reflection.SummarySearch" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
