--- a/src/Mvc/IRO.Mvc.Core/IRO.Mvc.Core.csproj
+++ b/src/Mvc/IRO.Mvc.Core/IRO.Mvc.Core.csproj
@@ -2,14 +2,13 @@
 
   <PropertyGroup>
     <Version>$(AsmVersion_Mvc)</Version>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="$(AspNetMvcVersion)" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="$(AspNetMvcVersion)" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="$(AspNetMvcVersion)" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1-beta1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="IRO.Common" Version="1.3.0" />
   </ItemGroup>
 
