--- a/src/Mvc/IRO.Mvc.Core/IRO.Mvc.Core.csproj
+++ b/src/Mvc/IRO.Mvc.Core/IRO.Mvc.Core.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="IRO.Common" Version="1.3.0" />
   </ItemGroup>
